--- a/paperpal.html
+++ b/paperpal.html
@@ -8,6 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.8/katex.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.8/katex.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
         * {
             margin: 0;
@@ -195,11 +196,14 @@
             margin-bottom: 1rem;
             width: 100%;
             border-bottom: 1px solid var(--border);
-            padding-bottom: 0.5rem;
+            padding-bottom: 1rem;
         }
 
         .input-tab {
-            padding: 0.5rem 1rem;
+            display: flex;
+            align-items: center;
+            gap: 0.75rem;
+            padding: 0.75rem 1.25rem;
             border: none;
             background: none;
             color: var(--text-light);
@@ -207,16 +211,23 @@
             font-weight: 500;
             transition: all 0.2s ease;
             border-radius: 0.5rem;
+            font-size: 1rem;
+        }
+
+        .input-tab i {
+            font-size: 1.25rem;
         }
 
         .input-tab:hover {
             color: var(--primary);
             background: #f8f9ff;
+            transform: translateY(-1px);
         }
 
         .input-tab.active {
             color: var(--primary);
             background: #f0f7ff;
+            font-weight: 600;
         }
 
         .input-area {
@@ -537,8 +548,14 @@
 
         <div class="upload-container">
             <div class="input-tabs">
-                <button class="input-tab active" data-input-type="pdf">PDF Upload</button>
-                <button class="input-tab" data-input-type="text">Text Input</button>
+                <button class="input-tab active" data-input-type="pdf">
+                    <i class="fas fa-file-pdf"></i>
+                    PDF Upload
+                </button>
+                <button class="input-tab" data-input-type="text">
+                    <i class="fas fa-align-left"></i>
+                    Text Input
+                </button>
             </div>
 
             <div class="input-area active" id="pdfInput">
