--- a/paperpal.html
+++ b/paperpal.html
@@ -77,14 +77,17 @@
         }
 
         .paper-header {
-            padding: 1rem;
+            padding: 0.75rem;
             border-bottom: 1px solid var(--border);
             background: #f8fafc;
             cursor: pointer;
             display: flex;
             align-items: center;
-            justify-content: space-between;
-            user-select: none;
+            gap: 0.5rem;
+        }
+
+        .paper-header span {
+            flex: 1;
         }
 
         .paper-header:hover {
@@ -121,12 +124,23 @@
 
         .paper-versions {
             padding: 0.5rem;
-            display: none;  /* Default to collapsed */
-            transition: all 0.2s ease;
+            display: none;
+            gap: 0.5rem;
+            flex-wrap: wrap;
+            background: var(--background);
         }
 
-        .paper-versions.expanded {
-            display: block;
+        .paper-versions button {
+            padding: 0.25rem 0.75rem;
+            border: 1px solid var(--border);
+            border-radius: 0.25rem;
+            background: var(--surface);
+            cursor: pointer;
+        }
+
+        .paper-versions button:hover {
+            background: var(--primary);
+            color: white;
         }
 
         .version-btn {
@@ -651,18 +665,15 @@
                 
                 const papersList = document.getElementById('papersList');
                 papersList.innerHTML = papers.map(paper => `
-                    <div class="paper-item" data-content-id="${paper.content_id}">
-                        <div class="paper-header" onclick="togglePaper('${paper.content_id}')">
-                            <div class="paper-title">${paper.original_filename}</div>
-                            <div class="paper-toggle">▼</div>
+                    <div class="paper-item">
+                        <div class="paper-header" onclick="toggleVersions('${paper.content_id}')">
+                            <span id="title-${paper.content_id}">${paper.original_filename || paper.original_url}</span>
+                            <button onclick="renamePaper('${paper.content_id}', event)">Rename</button>
+                            <button onclick="deletePaper('${paper.content_id}', event)">Delete</button>
                         </div>
-                        <div class="paper-versions" id="versions-${paper.content_id}">
+                        <div class="paper-versions" id="versions-${paper.content_id}" style="display: none;">
                             ${Object.entries(paper.versions).map(([grade, _]) => `
-                                <button class="version-btn" 
-                                        onclick="loadPaperVersion('${paper.content_id}', '${grade}')"
-                                        data-grade="${grade}">
-                                    ${formatGradeLevel(grade)}
-                                </button>
+                                <button onclick="loadPaperVersion('${paper.content_id}', '${grade}')">${formatGradeLevel(grade)}</button>
                             `).join('')}
                         </div>
                     </div>
@@ -1042,6 +1053,68 @@
         document.getElementById('pdfInput').style.display = 'block';
         document.getElementById('textInput').style.display = 'none';
         document.getElementById('urlInput').style.display = 'none';
+
+        // Add the rename and delete functions
+        async function renamePaper(contentId, event) {
+            event.stopPropagation(); // Prevent toggle
+            const titleElement = document.getElementById(`title-${contentId}`);
+            const currentName = titleElement.textContent;
+            const newName = prompt('Enter new name:', currentName);
+            
+            if (!newName || newName === currentName) return;
+
+            try {
+                const response = await fetch(`${API_URL}/api/paper/${contentId}/rename`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ new_name: newName })
+                });
+
+                if (!response.ok) {
+                    throw new Error('Failed to rename paper');
+                }
+
+                titleElement.textContent = newName;
+            } catch (error) {
+                console.error('Error renaming paper:', error);
+                alert('Failed to rename paper. Please try again.');
+            }
+        }
+
+        async function deletePaper(contentId, event) {
+            event.stopPropagation(); // Prevent toggle
+            if (!confirm('Are you sure you want to delete this paper?')) {
+                return;
+            }
+
+            try {
+                const response = await fetch(`${API_URL}/api/paper/${contentId}`, {
+                    method: 'DELETE'
+                });
+
+                if (!response.ok) {
+                    throw new Error('Failed to delete paper');
+                }
+
+                // Refresh the papers list
+                await refreshPapersList();
+            } catch (error) {
+                console.error('Error deleting paper:', error);
+                alert('Failed to delete paper. Please try again.');
+            }
+        }
+
+        // Add toggle function for versions
+        function toggleVersions(contentId, event) {
+            // Don't toggle if clicking buttons
+            if (event && event.target.tagName === 'BUTTON') {
+                return;
+            }
+            const versionsDiv = document.getElementById(`versions-${contentId}`);
+            versionsDiv.style.display = versionsDiv.style.display === 'none' ? 'block' : 'none';
+        }
     </script>
 </body>
 </html>
