--- a/paperpal.html
+++ b/paperpal.html
@@ -293,28 +293,66 @@
             display: block;
         }
 
-        .text-input {
+        .input-group {
             width: 100%;
-            min-height: 300px;
-            padding: 1rem;
-            border: 2px solid var(--border);
-            border-radius: 1rem;
-            background: var(--surface);
-            font-family: inherit;
-            font-size: 1rem;
-            line-height: 1.6;
-            resize: vertical;
-            transition: all 0.3s ease;
+            display: flex;
+            gap: 1rem;
+            align-items: flex-start;
+            margin-bottom: 1rem;
         }
 
-        .text-input:focus {
+        .input-field {
+            flex: 1;
+            padding: 1rem;
+            border: 1px solid var(--border);
+            border-radius: 0.5rem;
+            background: var(--surface);
+            font-size: 1rem;
+            color: var(--text);
+            transition: all 0.2s ease;
+            min-height: 3rem;
+            font-family: inherit;
+        }
+
+        .input-field:focus {
             outline: none;
             border-color: var(--primary);
-            box-shadow: 0 0 0 3px rgba(99, 102, 241, 0.1);
+            box-shadow: 0 0 0 2px rgba(99, 102, 241, 0.1);
         }
 
-        .text-input::placeholder {
+        textarea.input-field {
+            min-height: 200px;
+            resize: vertical;
+        }
+
+        .upload-btn {
+            padding: 0.875rem 1.5rem;
+            background: var(--primary);
+            color: white;
+            border: none;
+            border-radius: 0.5rem;
+            font-size: 1rem;
+            font-weight: 500;
+            cursor: pointer;
+            transition: all 0.2s ease;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            white-space: nowrap;
+        }
+
+        .upload-btn:hover {
+            background: var(--primary-dark);
+        }
+
+        .upload-btn i {
+            font-size: 1rem;
+        }
+
+        .url-hint {
             color: var(--text-light);
+            font-size: 0.875rem;
+            margin-top: 0.5rem;
         }
 
         .upload-area {
@@ -629,47 +667,62 @@
 
         <div class="upload-container">
             <div class="input-tabs">
-                <button class="input-tab active" data-input-type="pdf">
+                <button class="input-tab" data-input-type="pdf">
                     <i class="fas fa-file-pdf"></i>
                     PDF Upload
                 </button>
                 <button class="input-tab" data-input-type="text">
-                    <i class="fas fa-align-left"></i>
+                    <i class="fas fa-keyboard"></i>
                     Text Input
                 </button>
                 <button class="input-tab" data-input-type="url">
-                    <i class="fas fa-globe"></i>
+                    <i class="fas fa-link"></i>
                     Web URL
+                </button>
+                <button class="input-tab" data-input-type="youtube">
+                    <i class="fas fa-video"></i>
+                    YouTube URL
                 </button>
             </div>
 
-            <div class="input-area active" id="pdfInput">
-                <div class="upload-area" id="uploadArea">
-                    <h3>Drop your PDF here</h3>
-                    <p>or click to select a file</p>
-                    <input type="file" id="fileInput" class="file-input" accept=".pdf" style="display: none;">
+            <div class="input-area" id="pdfInput">
+                <div id="uploadArea" class="upload-area">
+                    <input type="file" id="fileInput" accept=".pdf" style="display: none;">
+                    <i class="fas fa-cloud-upload-alt"></i>
+                    <p>Drag & drop your PDF here or click to browse</p>
                 </div>
             </div>
 
-            <div class="input-area" id="textInput">
-                <textarea 
-                    class="text-input"
-                    id="textArea"
-                    placeholder="Paste or type your text here..."
-                ></textarea>
-                <button class="simplify-btn" onclick="handleTextSubmit()" style="margin-top: 1rem;">
-                    Process Text
-                </button>
+            <div class="input-area" id="textInput" style="display: none;">
+                <div class="input-group">
+                    <textarea id="textArea" class="input-field" placeholder="Enter your text here..."></textarea>
+                    <button onclick="handleTextSubmit()" class="upload-btn">
+                        <i class="fas fa-upload"></i>
+                        Process Text
+                    </button>
+                </div>
             </div>
 
-            <div class="input-area" id="urlInput">
-                <div class="url-input-container">
-                    <input type="url" id="urlArea" class="url-input" placeholder="Enter website URL (e.g., https://example.com/article)">
-                    <button class="simplify-btn" onclick="handleUrlSubmit()" style="margin-top: 1rem;">
+            <div class="input-area" id="urlInput" style="display: none;">
+                <div class="input-group">
+                    <input type="text" id="urlArea" placeholder="Enter webpage URL" class="input-field">
+                    <button onclick="handleUrlSubmit()" class="upload-btn">
+                        <i class="fas fa-upload"></i>
                         Process URL
                     </button>
                 </div>
                 <p class="url-hint">Enter the URL of an article or webpage to analyze its content.</p>
+            </div>
+
+            <div class="input-area" id="youtubeInput" style="display: none;">
+                <div class="input-group">
+                    <input type="text" id="youtube-url" placeholder="Enter YouTube video URL" class="input-field">
+                    <button onclick="handleYouTubeUpload()" class="upload-btn">
+                        <i class="fas fa-upload"></i>
+                        Process Video
+                    </button>
+                </div>
+                <p class="url-hint">Enter a YouTube video URL to analyze its transcript.</p>
             </div>
 
             <div id="uploadProgress" style="display: none;">
@@ -1162,6 +1215,54 @@
             } catch (error) {
                 console.error('Error deleting paper:', error);
                 alert('Failed to delete paper. Please try again.');
+            }
+        }
+
+        async function handleYouTubeUpload() {
+            const youtubeUrl = document.getElementById('youtube-url').value.trim();
+            if (!youtubeUrl) {
+                alert('Please enter a YouTube URL');
+                return;
+            }
+
+            // Show upload progress
+            const youtubeInput = document.getElementById('youtubeInput');
+            const uploadProgress = document.getElementById('uploadProgress');
+            youtubeInput.style.display = 'none';
+            uploadProgress.style.display = 'block';
+
+            try {
+                const response = await fetch(`${API_URL}/api/youtube`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ url: youtubeUrl })
+                });
+
+                const result = await response.json();
+
+                if (!response.ok) {
+                    throw new Error(result.detail || 'Failed to process YouTube video');
+                }
+
+                // Refresh the papers list and hide progress
+                await refreshPapersList();
+                youtubeInput.style.display = 'block';
+                uploadProgress.style.display = 'none';
+                document.getElementById('youtube-url').value = ''; // Clear the input
+
+                // Load the first version
+                if (result.versions && Object.keys(result.versions).length > 0) {
+                    const firstGrade = Object.keys(result.versions)[0];
+                    await loadPaperVersion(result.content_id, firstGrade);
+                }
+
+            } catch (error) {
+                console.error('YouTube processing error:', error);
+                alert('Error processing YouTube video: ' + error.message);
+                youtubeInput.style.display = 'block';
+                uploadProgress.style.display = 'none';
             }
         }
     </script>
